<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cs175-hw2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="player_name">Name:</string>
    <string name="return_button">Return</string>
    <string name="game_speed">Game Speed:</string>
    <string name="name_hint">Player 1</string>
    <string name="title_activity_game">MainActivity</string>
    <string name="high_score_label">High Score:</string>
    <string name="lives_label">Lives:</string>
    <string name="lives">3</string>
    <string name="high_score">0</string>
    <string name="there_button">I\'m There</string>
    <string name="current_score_label">Score:</string>
    <string name="current_score">0</string>
    <string name="dialog_message">Do you want to save your changes?</string>
    <string name="dialog_title">Save modifications</string>
    <string name="dialog_ok">Yes</string>
    <string name="dialog_cancel">No</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="imgdescription">Logotype</string>
    <string name="game_name">Flip It!</string>

</resources>
