<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ff412c"
    tools:context="com.example.cs175_hw2.MainActivity" >
    
    <TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="50dp"
		    android:textSize="48sp"
		    android:text="@string/game_name"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/imgdescription"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:src="@drawable/ic_launcher" />
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="bottom"
    android:orientation="vertical" >


    <Button
     android:layout_gravity="center"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/start_game"
     android:onClick="openGameActivity"/>
    <Button
     android:layout_gravity="center"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/settings"
     android:onClick="openSettingsActivity"/>
    </LinearLayout>
    
</RelativeLayout>
