<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#d3d3d3"
    tools:context="com.example.cs175_hw2.SettingsActivity" >

    	<RelativeLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="match_parent"
    	    android:orientation="vertical"
    	    android:paddingLeft="16dp"
    	    android:paddingRight="16dp" >

    	    <Button
    	        android:id="@+id/button1"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentBottom="true"
    	        android:layout_centerHorizontal="true"
    	        android:layout_marginBottom="20dp"
    	        android:text="@string/return_button"
    	        android:onClick="launchDialog" />

    	    <TextView
    	        android:id="@+id/textView1"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentTop="true"
    	        android:layout_marginRight="32dp"
    	        android:layout_marginTop="136dp"
    	        android:text="@string/player_name" />

    	    <EditText
    	        android:id="@+id/editText1"
    	        android:hint="@string/name_hint"
    	        android:layout_width="153dp"
    	        android:layout_height="wrap_content"
    	        android:layout_alignBottom="@+id/textView1"
    	        android:layout_alignLeft="@+id/button1"
    	        android:ems="10" >

    	        <requestFocus />
    	    </EditText>

    	    <TextView
    	        android:id="@+id/textView2"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignLeft="@+id/textView1"
    	        android:layout_centerVertical="true"
    	        android:text="@string/game_speed" />

    	    <SeekBar
    	        android:id="@+id/seekBar1"
    	        android:max="100"
    	        android:progress="50"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_alignBottom="@+id/textView2"
    	        android:layout_alignLeft="@+id/editText1" />

    	    <TextView
    	        android:id="@+id/seek_bar_value"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignRight="@+id/editText1"
    	        android:layout_below="@+id/seekBar1"
    	        android:layout_marginRight="42dp"
    	        android:layout_marginTop="20dp" />

    	</RelativeLayout>

</RelativeLayout>
